# kaggle-eeg-dataset

./: README.md  brainwave_classifier.py  main.py  pyproject.toml
eeg/: classifier.py  feature_extractor.py  loader.py  preprocessor.py
